--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Путешествия по России</title>
+    <title>Mesto</title>
     <link rel="stylesheet" href="./pages/index.css">
 
 </head>
@@ -12,6 +12,7 @@
 <body class="page">
 
     <header class="header">
+        <img src="./images/logo.svg" class="header__logo" alt="Лого">
 
     </header>
 
