--- a/index.html
+++ b/index.html
@@ -17,6 +17,76 @@
     </header>
 
     <main class="content">
+        <section class="profile">
+
+            <img src="./images/Avatar.png" alt="Аватар" class="profile__avatar">
+            <div class="profile__name-container">
+                <h1 class="profile__title">Жак-Ив Кусто</h1>
+                <button class="profile__edit-button">
+                    <img src="./images/vector.svg" alt="Редактировать" class="profile__edit-image">
+            </button>
+            </div>
+
+            <p class="profile__subtitle">Исследователь океaна</p>
+            <button class="profile__add-button"></button>
+
+        </section>
+
+        <section class="places">
+            <div class="places__card">
+                <img src="./images/karachaevsk.jpg" alt="Карачаевск" class="places__image">
+                <div class="places__name-container">
+                    <h2 class="places__name">Карачаевск</h2>
+                    <button class="places__like"></button>
+                </div>
+
+            </div>
+
+            <div class="places__card">
+                <img src="./images/karachaevsk.jpg" alt="Карачаевск" class="places__image">
+                <div class="places__name-container">
+                    <h2 class="places__name">Карачаевск</h2>
+                    <button class="places__like"></button>
+                </div>
+
+            </div>
+
+            <div class="places__card">
+                <img src="./images/karachaevsk.jpg" alt="Карачаевск" class="places__image">
+                <div class="places__name-container">
+                    <h2 class="places__name">Карачаевск</h2>
+                    <button class="places__like"></button>
+                </div>
+
+            </div>
+
+            <div class="places__card">
+                <img src="./images/karachaevsk.jpg" alt="Карачаевск" class="places__image">
+                <div class="places__name-container">
+                    <h2 class="places__name">Карачаевск</h2>
+                    <button class="places__like"></button>
+                </div>
+
+            </div>
+
+            <div class="places__card">
+                <img src="./images/karachaevsk.jpg" alt="Карачаевск" class="places__image">
+                <div class="places__name-container">
+                    <h2 class="places__name">Карачаевск</h2>
+                    <button class="places__like"></button>
+                </div>
+
+            </div>
+
+            <div class="places__card">
+                <img src="./images/karachaevsk.jpg" alt="Карачаевск" class="places__image">
+                <div class="places__name-container">
+                    <h2 class="places__name">Карачаевск</h2>
+                    <button class="places__like"></button>
+                </div>
+
+            </div>
+        </section>
 
 
     </main>
