--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
     </main>
 
     <footer class="footer">
+        <img src="./images/© 2020 Mesto Russia.svg" alt="Логотип" class="footer__logo">
 
     </footer>
 
