--- a/index.html
+++ b/index.html
@@ -33,68 +33,78 @@
         </section>
 
         <section class="places">
-            <div class="places__card">
-                <img src="./images/karachaevsk.jpg" alt="Карачаевск" class="places__image">
-                <div class="places__name-container">
-                    <h2 class="places__name">Карачаевск</h2>
-                    <button class="places__like"></button>
-                </div>
+            <ul class="places__cards">
+                <li class="places__card">
+                    <img src="./images/karachaevsk.jpg" alt="Карачаевск" class="places__image">
+                    <div class="places__name-container">
+                        <h2 class="places__name">Карачаево-Черкесия</h2>
+                        <button class="places__like"></button>
+                    </div>
+                </li>
 
-            </div>
+                <li class="places__card">
+                    <img src="./images/baikal.jpg" alt="Байкал" class="places__image">
+                    <div class="places__name-container">
+                        <h2 class="places__name">Байкал</h2>
+                        <button class="places__like"></button>
+                    </div>
+                </li>
 
-            <div class="places__card">
-                <img src="./images/karachaevsk.jpg" alt="Карачаевск" class="places__image">
-                <div class="places__name-container">
-                    <h2 class="places__name">Карачаевск</h2>
-                    <button class="places__like"></button>
-                </div>
+                <li class="places__card">
+                    <img src="./images/cairo.jpg" alt="Каир" class="places__image">
+                    <div class="places__name-container">
+                        <h2 class="places__name">Каир</h2>
+                        <button class="places__like"></button>
+                    </div>
+                </li>
 
-            </div>
+                <li class="places__card">
+                    <img src="./images/dombai.jpg" alt="Домбай" class="places__image">
+                    <div class="places__name-container">
+                        <h2 class="places__name">Домбай</h2>
+                        <button class="places__like"></button>
+                    </div>
+                </li>
 
-            <div class="places__card">
-                <img src="./images/karachaevsk.jpg" alt="Карачаевск" class="places__image">
-                <div class="places__name-container">
-                    <h2 class="places__name">Карачаевск</h2>
-                    <button class="places__like"></button>
-                </div>
+                <li class="places__card">
+                    <img src="./images/elbrus.jpg" alt="Эльбрус" class="places__image">
+                    <div class="places__name-container">
+                        <h2 class="places__name">Гора Эльбрус</h2>
+                        <button class="places__like"></button>
+                    </div>
+                </li>
 
-            </div>
+                <li class="places__card">
+                    <img src="./images/valencia.jpg" alt="Валенсия" class="places__image">
+                    <div class="places__name-container">
+                        <h2 class="places__name">Валенсия</h2>
+                        <button class="places__like"></button>
+                    </div>
+                </li>
 
-            <div class="places__card">
-                <img src="./images/karachaevsk.jpg" alt="Карачаевск" class="places__image">
-                <div class="places__name-container">
-                    <h2 class="places__name">Карачаевск</h2>
-                    <button class="places__like"></button>
-                </div>
+            </ul>
 
-            </div>
-
-            <div class="places__card">
-                <img src="./images/karachaevsk.jpg" alt="Карачаевск" class="places__image">
-                <div class="places__name-container">
-                    <h2 class="places__name">Карачаевск</h2>
-                    <button class="places__like"></button>
-                </div>
-
-            </div>
-
-            <div class="places__card">
-                <img src="./images/karachaevsk.jpg" alt="Карачаевск" class="places__image">
-                <div class="places__name-container">
-                    <h2 class="places__name">Карачаевск</h2>
-                    <button class="places__like"></button>
-                </div>
-
-            </div>
         </section>
 
 
     </main>
 
     <footer class="footer">
-        <img src="./images/© 2020 Mesto Russia.svg" alt="Логотип" class="footer__logo">
-
+        <img src="./images/©2020MestoRussia.svg" alt="Логотип" class="footer__logo">
     </footer>
+
+    <section class="popup">
+        <form class="popup__container">
+            <button type="button" class="popup__close"></button>
+            <h2 class="popup__title">Редактировать профиль</h2>
+            <fieldset class="popup__contact-info">
+                <input type="text" class="popup__name">
+                <input type="text" class="popup__self">
+            </fieldset>
+            <input type="submit" class="popup__save" value="Сохранить">
+        </form>
+    </section>
+    <script src="./scripts/index.js"></script>
 
 </body>
 
