--- a/index.html
+++ b/index.html
@@ -6,104 +6,86 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mesto</title>
     <link rel="stylesheet" href="./pages/index.css">
-
 </head>
 
 <body class="page">
 
     <header class="header">
         <img src="./images/logo.svg" class="header__logo" alt="Лого">
-
     </header>
 
     <main class="content">
         <section class="profile">
-
             <img src="./images/Avatar.png" alt="Аватар" class="profile__avatar">
             <div class="profile__name-container">
                 <h1 class="profile__title">Жак-Ив Кусто</h1>
-                <button class="profile__edit-button">
+                <button class="profile__edit-button" type="button">
                     <img src="./images/vector.svg" alt="Редактировать" class="profile__edit-image">
             </button>
             </div>
-
             <p class="profile__subtitle">Исследователь океaна</p>
-            <button class="profile__add-button"></button>
-
+            <button class="profile__add-button" type="button"></button>
         </section>
 
         <section class="places">
             <ul class="places__cards">
-                <li class="places__card">
-                    <img src="./images/karachaevsk.jpg" alt="Карачаевск" class="places__image">
-                    <div class="places__name-container">
-                        <h2 class="places__name">Карачаево-Черкесия</h2>
-                        <button class="places__like"></button>
-                    </div>
-                </li>
-
-                <li class="places__card">
-                    <img src="./images/baikal.jpg" alt="Байкал" class="places__image">
-                    <div class="places__name-container">
-                        <h2 class="places__name">Байкал</h2>
-                        <button class="places__like"></button>
-                    </div>
-                </li>
-
-                <li class="places__card">
-                    <img src="./images/cairo.jpg" alt="Каир" class="places__image">
-                    <div class="places__name-container">
-                        <h2 class="places__name">Каир</h2>
-                        <button class="places__like"></button>
-                    </div>
-                </li>
-
-                <li class="places__card">
-                    <img src="./images/dombai.jpg" alt="Домбай" class="places__image">
-                    <div class="places__name-container">
-                        <h2 class="places__name">Домбай</h2>
-                        <button class="places__like"></button>
-                    </div>
-                </li>
-
-                <li class="places__card">
-                    <img src="./images/elbrus.jpg" alt="Эльбрус" class="places__image">
-                    <div class="places__name-container">
-                        <h2 class="places__name">Гора Эльбрус</h2>
-                        <button class="places__like"></button>
-                    </div>
-                </li>
-
-                <li class="places__card">
-                    <img src="./images/valencia.jpg" alt="Валенсия" class="places__image">
-                    <div class="places__name-container">
-                        <h2 class="places__name">Валенсия</h2>
-                        <button class="places__like"></button>
-                    </div>
-                </li>
-
             </ul>
-
         </section>
 
 
     </main>
 
     <footer class="footer">
-        <img src="./images/©2020MestoRussia.svg" alt="Логотип" class="footer__logo">
+        <p class="footer__logo">&copy; 2020 Mesto Russia</p>
     </footer>
 
-    <section class="popup">
-        <form class="popup__container">
+    <section class="popup popup_type_edit">
+        <form class="popup__container" name="box-popup">
             <button type="button" class="popup__close"></button>
             <h2 class="popup__title">Редактировать профиль</h2>
             <fieldset class="popup__contact-info">
-                <input type="text" class="popup__name">
-                <input type="text" class="popup__self">
+                <input type="text" name="name" class="popup__input popup__input_type_name">
+                <input type="text" name="description" class="popup__input popup__input_type_job">
             </fieldset>
             <input type="submit" class="popup__save" value="Сохранить">
         </form>
     </section>
+
+    <section class="popup popup_type_add-card">
+        <form class="popup__container" name="box-popup">
+            <button type="button" class="popup__close"></button>
+            <h2 class="popup__title">Новое место</h2>
+            <fieldset class="popup__contact-info">
+                <input type="text" name="name" class="popup__input popup__input_type_title" placeholder="Название">
+                <input type="text" name="link" class="popup__input popup__input_type_link" placeholder="Ссылка на картинку">
+            </fieldset>
+            <input type="submit" class="popup__save" value="Создать">
+        </form>
+    </section>
+
+    <section class="popup popup_type_activ-image">
+
+        <figure class="popup__image">
+            <button type="button" class="popup__close popup__close_type_image"></button>
+            <img src="" alt="" class="popup__image-activ">
+            <figcaption class="popup__image-text"></figcaption>
+        </figure>
+    </section>
+
+    <template class="card-template">
+        <li class="places__card">
+            <button class="places__delete-button" type="button">
+                <div class="places__delete-cup"></div>
+                <div class="places__delete-basket"></div>
+            </button>
+            
+            <img src="#" alt="" class="places__image">
+            <div class="places__name-container">
+                <h2 class="places__name"></h2>
+                <button class="places__like" type="button"></button>
+            </div>
+        </li>
+    </template>
     <script src="./scripts/index.js"></script>
 
 </body>
