задать значение атрибуту src

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
         <figure class="popup__image">
             <button type="button" class="popup__close popup__close_type_image"></button>
-            <img src="" alt="" class="popup__image-activ">
+            <img src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/arkhyz.jpg" alt="Архыз" class="popup__image-activ">
             <figcaption class="popup__image-text"></figcaption>
         </figure>
     </section>
