--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <button type="button" class="popup__close"></button>
             <h2 class="popup__title">Новое место</h2>
             <fieldset class="popup__contact-info">
-                <input id="title" type="text" name="title" class="popup__input popup__input_type_title" placeholder="Название" required minlength="2" maxlength="30">
+                <input id="title" type="text" name="name" class="popup__input popup__input_type_title" placeholder="Название" required minlength="2" maxlength="30">
                 <span id="error-title" class="popup__error popup__error_active"></span>
                 <input id="link" type="url" name="link" class="popup__input popup__input_type_link" placeholder="Ссылка на картинку" required>
                 <span id="error-link" class="popup__error popup__error_active"></span>
