--- a/src/index.html
+++ b/src/index.html
@@ -5,22 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mesto</title>
-    <link rel="stylesheet" href="./pages/index.css">
+
 </head>
 
 <body class="page">
 
     <header class="header">
-        <img src="./images/logo.svg" class="header__logo" alt="Лого">
+        <img src="<%=require('./images/logo.svg')%>" class="header__logo" alt="Лого">
     </header>
 
     <main class="content">
         <section class="profile">
-            <img src="./images/Avatar.png" alt="Аватар" class="profile__avatar">
+            <img src="<%=require('./images/Avatar.png')%>" alt="Аватар" class="profile__avatar">
             <div class="profile__name-container">
                 <h1 class="profile__title">Жак-Ив Кусто</h1>
                 <button class="profile__edit-button" type="button">
-                    <img src="./images/vector.svg" alt="Редактировать" class="profile__edit-image">
+                    <img src="<%=require('./images/vector.svg')%>" alt="Редактировать" class="profile__edit-image">
             </button>
             </div>
             <p class="profile__subtitle">Исследователь океaна</p>
@@ -91,8 +91,6 @@
         </li>
     </template>
 
-
-    <script src="pages/index.js" type="module"></script>
 
 
 </body>
