--- a/src/index.html
+++ b/src/index.html
@@ -65,8 +65,8 @@
             <fieldset class="popup__contact-info">
                 <input id="title" type="text" name="name" class="popup__input popup__input_type_title" placeholder="Название" required minlength="2" maxlength="30">
                 <span id="error-title" class="popup__error popup__error_active"></span>
-                <input id="link" type="url" name="link" class="popup__input popup__input_type_link" placeholder="Ссылка на картинку" required>
-                <span id="error-link" class="popup__error popup__error_active"></span>
+                <input id="link-add-card" type="url" name="link" class="popup__input popup__input_type_link" placeholder="Ссылка на картинку" required>
+                <span id="error-link-add-card" class="popup__error popup__error_active"></span>
             </fieldset>
             <button type="submit" class="popup__save" value="Создать">Создать</button>
         </form>
@@ -95,8 +95,8 @@
             <button type="button" class="popup__close"></button>
             <h2 class="popup__title popup__title__update-avatar">Обновить аватар</h2>
             <fieldset class="popup__contact-info">
-                <input id="link" type="url" name="link" class="popup__input popup__input_type_link" placeholder="Ссылка на аватар" required>
-                <span id="error-link" class="popup__error popup__error_active"></span>
+                <input id="link-update-avatar" type="url" name="link" class="popup__input popup__input_type_link" placeholder="Ссылка на аватар" required>
+                <span id="error-link-update-avatar" class="popup__error popup__error_active"></span>
             </fieldset>
             <button type="submit" class="popup__save" value="сохранить">Сохранить</button>
         </form>
